# merit_api

./: .gitignore  .npmignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  PRIORITY1_COMPLETION.md  PRIORITY1_IMPLEMENTATION.md  README.md  TEST_GUIDE.md  conftest.py  glama.json  merit_api.py  package.json  pyproject.toml  requirements.txt  test_fetch_data.py  test_merit_api.py  test_phase1_read_operations.py  test_taxes.py
.claude/: settings.local.json
.github/workflows/: ci.yml  read-operations.yml
mcp/: README.md  pyproject.toml
mcp/src/merit_api_mcp/: __init__.py  config.py  prompts.py  registry.py  resources.py  server.py
mcp/tests/: conftest.py  test_mcp_server.py
merit_api/: README.md  merit_api_methods_v1_v2.md  pyproject.toml  scripts_report_method_test_coverage.py
merit_api/reports/: method_test_coverage.md
merit_api/src/merit_api/: __init__.py  client.py  exceptions.py  namespaces.py
merit_api/tests/: conftest.py  test_duplicate_prevention.py  test_fetch_data.py  test_integration_read.py  test_merit_api.py  test_phase0_foundation.py  test_priority1_integration.py  test_priority1_invoice_delivery.py  test_purchase_invoice_integration.py  test_read_methods.py  test_send_invoice.py  test_taxes.py  test_version.py
src/merit_api/: client.py  exceptions.py  namespaces.py
src/merit_api/mcp/: prompts.py  resources.py  server.py
tests/: test_fetch_data.py  test_mcp_server.py  test_send_invoice.py  test_taxes.py
