[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "merit-unofficial-mcp-server"
version = "0.5.1"
description = "FastMCP server for the Merit Aktiva API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Jaak", email = "jaak@example.com"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastmcp>=3.2.4",
    "merit-api>=0.5.1",
]

[project.scripts]
merit-unofficial-mcp-server = "merit_api_mcp.server:main"
merit-unofficial-mcp = "merit_api_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/merit_api_mcp"]

[tool.uv.sources]
merit-api = { workspace = true }

