[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "merit-api"
version = "0.4.0"
description = "Python client for Merit Aktiva API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Jaak", email = "jaak@example.com"},
]
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/merit_api"]
